# adversarial-ai-security-sandbox

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  ENHANCEMENTS_SUMMARY.md  FINAL_DELIVERABLES_INDEX.md  MULTI_GPU_ENHANCEMENT_GUIDE.md  NOTICE  README.md  VESUVIUS_ENHANCEMENTS.md  WHICH_VERSION_TO_USE.md  biomass_enhanced.py  biomass_ultra_enhanced.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  vesuvius_enhanced.py  vesuvius_pipeline_JUPYTER_MULTI_GPU.py  vesuvius_pipeline_MULTI_GPU_ENHANCED.py
.github/workflows/: main.yml
docs/development/: SETUP.md
frontend/: .eslintignore  Dockerfile.dev  package.json  tsconfig.json
frontend/src/: App.css  App.js  App.test.js  index.css  index.js  reportWebVitals.js
frontend/src/components/: AttackComponent.js  HistoricalAttacksComponent.js  LoginComponent.js  ModelManagementComponent.js  PredictionComponent.js
scripts/: add_spdx_header.py
services/: __init__.py  config.py  database.py  logging_config.py  metrics_collector.py  middleware.py
services/api_gateway/: Dockerfile  __init__.py  main.py  requirements.txt
services/attack_service/: Dockerfile  __init__.py  main.py  requirements.txt
services/model_service/: Dockerfile  __init__.py  main.py  requirements.txt
services/webhook_listener/: Dockerfile  __init__.py  main.py  requirements.txt
tests/: conftest.py  test_api_gateway.py  test_attack_service.py  test_integration.py  test_model_service.py  test_utils.py
