# SPDX-License-Identifier: MPL-2.0

[metadata]
name = adversarial-ai-security-sandbox
version = 0.1.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs,build,dist,.venv,migrations
ignore = E203, W503, E501
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --tb=short
    -v
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
branch = True
omit =
    */migrations/*
    */tests/*
    */__init__.py
    */setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
precision = 2
